deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gs-springboot
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: gs-springboot
  template:
    metadata:
      labels:
        app: gs-springboot
    spec:
      containers:
      - image: 361893476061.dkr.ecr.eu-central-1.amazonaws.com/gs-spring-boot:latest
        imagePullPolicy: Always
        name: gs-springboot
        ports:
        - containerPort: 80
