deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/ingressState: '{"Z3Mtc3ByaW5nYm9vdC1pbmdyZXNzL2FyZ29jZC9ncy1zcHJpbmdib290LWRldi5ldS5pZGVhbG8uY29tLy84MA==":""}'
    field.cattle.io/publicEndpoints: '[{"addresses":["10.115.32.23"],"port":80,"protocol":"HTTP","serviceName":"argocd:gs-springboot","ingressName":"argocd:gs-springboot-ingress","hostname":"gs-springboot-dev.eu.idealo.com","allNodes":true}]'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"labels":{"argocd.argoproj.io/instance":"gs-springboot"},"name":"gs-springboot-ingress","namespace":"argocd"},"spec":{"rules":[{"host":"gs-springboot.k3s1.idealo.devel"},{"http":{"paths":[{"backend":{"serviceName":"gs-springboot","servicePort":80},"path":"/"}]}}]}}'
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2019-12-04T12:36:30Z"
  generation: 3
  labels:
    argocd.argoproj.io/instance: gs-springboot
  name: gs-springboot-ingress
  namespace: argocd
  resourceVersion: "150428"
  selfLink: /apis/extensions/v1beta1/namespaces/argocd/ingresses/gs-springboot-ingress
  uid: b0b2c809-2c02-4afd-b27a-64889c46b129
spec:
  rules:
  - host: gs-springboot-dev.eu.idealo.com
    http:
      paths:
      - backend:
          serviceName: gs-springboot
          servicePort: 80
status:
  loadBalancer:
    ingress:
    - ip: 10.115.32.23
