deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gs-springboot
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gs-springboot
